add query